--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eee7ff">  <td>23/11/30 03:50:03</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@6da21078]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1206051975</td>   <td></td> </tr>
-<tr bgcolor="917cb2">  <td>23/11/30 03:49:57</td>   <td>-5482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@6da21078]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1206051975</td>   <td></td> </tr>
-<tr bgcolor="917cb2">  <td>23/11/30 03:48:17</td>   <td>-105744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@6da21078]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1206051975</td>   <td></td> </tr>
-<tr bgcolor="eee7ff">  <td>23/11/30 03:48:16</td>   <td>-106337</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@6da21078]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1206051975</td>   <td></td> </tr>
-<tr bgcolor="917cb2">  <td>23/11/30 03:48:35</td>   <td>-87231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@6da21078]">nightly_add_record_without_holiday_TC_1105</td> 
-  <td>main@1206051975</td>   <td></td> </tr>
+<tr bgcolor="b9e78c">  <td>23/12/01 19:11:03</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4d02f94e]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1328238652</td>   <td></td> </tr>
+<tr bgcolor="b687be">  <td>23/12/01 19:10:59</td>   <td>-3948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4d02f94e]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@1328238652</td>   <td></td> </tr>
+<tr bgcolor="b687be">  <td>23/12/01 19:06:39</td>   <td>-263221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4d02f94e]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@1328238652</td>   <td></td> </tr>
+<tr bgcolor="b9e78c">  <td>23/12/01 19:06:38</td>   <td>-264105</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@4d02f94e]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1328238652</td>   <td></td> </tr>
+<tr bgcolor="b687be">  <td>23/12/01 19:07:25</td>   <td>-217899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@4d02f94e]">nightly_add_record_without_holiday_TC_1105</td> 
+  <td>main@1328238652</td>   <td></td> </tr>
 </table>
