--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,70 +4,40 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_2_SpaceTypes</td>
+<td>com.marina.tests.Mod_7_RatesStorage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>exportNewAddSpace_verifyCompleteRecords_TC_209</td>
-<td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>SelectionUnitPeriod_and_verify_two_option_TC_214</td>
+<td>createGroup_verifyGroup_TC_1101</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyDeleteSpace_TC_212</td>
-<td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>multipleUsersWithMutlipleSelections_TC_203</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySpaceData_afterEdit_TC_208</td>
-<td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySpaceData_fromTableData_TC_205</td>
-<td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySpacePage_Tc_201</td>
-<td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>exportSpacesGoogleSheet_TC_210</td>
-<td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>add_Spaces_Single_And_Carparking_Options_TC_213</td>
+<td>nightly_delete_newley_bucketAndVerify_TC_1104</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addSpace_skippingFileds_TC_204</td>
-<td>regression smoke sanity </td>
+<td>TC_1106</td>
+<td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify_serachField_withSpaceName_TC_211</td>
-<td>regression smoke sanity </td>
+<td>nightly_add_record_without_holiday_TC_1105</td>
+<td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPopupAddSpace_TC_202</td>
-<td>regression smoke sanity </td>
+<td>nighlty_addNew_Bucket_andVerifyBucket_TC_1103</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>newlyGroupCreated_RevisionHisotryEmpty_TC_1102</td>
+<td>regression smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
