--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,76 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">SelectionUnitPeriod_and_verify_two_option_TC_214</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:47:42</td>   <td>-958293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.addSpace_skippingFileds_TC_204()[pri:5, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">addSpace_skippingFileds_TC_204</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:59:42</td>   <td>-238686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213()[pri:14, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">add_Spaces_Single_And_Carparking_Options_TC_213</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="ee8876">  <td>23/11/20 06:03:44</td>   <td>3946</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:36</td>   <td>-1324651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:03</td>   <td>-1297433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:47:11</td>   <td>-989191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:48:12</td>   <td>-928308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:50:10</td>   <td>-810082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:52:47</td>   <td>-653545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:54:41</td>   <td>-539328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:57:19</td>   <td>-381051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:59:15</td>   <td>-265387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:08</td>   <td>-31894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:42</td>   <td>1951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:05</td>   <td>-1355309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:38</td>   <td>-1322197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:18</td>   <td>-1281893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:47:18</td>   <td>-981770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:48:19</td>   <td>-921717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:50:19</td>   <td>-801473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:52:51</td>   <td>-649048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:54:44</td>   <td>-536535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:57:23</td>   <td>-377266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:59:21</td>   <td>-259465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:18</td>   <td>-21989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:53:28</td>   <td>-612377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:10, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">exportNewAddSpace_verifyCompleteRecords_TC_209</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:54:44</td>   <td>-536539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.exportSpacesGoogleSheet_TC_210()[pri:11, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">exportSpacesGoogleSheet_TC_210</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="ee8876">  <td>23/11/20 05:41:05</td>   <td>-1355729</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:46</td>   <td>-1254465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203()[pri:4, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">multipleUsersWithMutlipleSelections_TC_203</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:57:45</td>   <td>-355327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyDeleteSpace_TC_212()[pri:13, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifyDeleteSpace_TC_212</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:01</td>   <td>-1299555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyPopupAddSpace_TC_202()[pri:3, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifyPopupAddSpace_TC_202</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:50:44</td>   <td>-776263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_afterEdit_TC_208()[pri:9, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifySpaceData_afterEdit_TC_208</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:48:43</td>   <td>-897168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_fromTableData_TC_205()[pri:6, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifySpaceData_fromTableData_TC_205</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:36</td>   <td>-1324749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpacePage_Tc_201()[pri:2, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifySpacePage_Tc_201</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:55:19</td>   <td>-501379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verify_serachField_withSpaceName_TC_211()[pri:12, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verify_serachField_withSpaceName_TC_211</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:29:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.TC_1106()[pri:6, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">TC_1106</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6b85f9">  <td>23/12/01 21:30:15</td>   <td>52116</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:23:11</td>   <td>-371897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:24:39</td>   <td>-284113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:25:34</td>   <td>-228454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:26:39</td>   <td>-163755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:28:49</td>   <td>-34342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:30:08</td>   <td>45460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:21:48</td>   <td>-455094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:23:13</td>   <td>-369733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:24:42</td>   <td>-280386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:25:37</td>   <td>-225801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:26:42</td>   <td>-160435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:28:51</td>   <td>-31743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:22:19</td>   <td>-424127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6b85f9">  <td>23/12/01 21:21:47</td>   <td>-455886</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:23:42</td>   <td>-340993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.newlyGroupCreated_RevisionHisotryEmpty_TC_1102()[pri:2, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:25:18</td>   <td>-244756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nighlty_addNew_Bucket_andVerifyBucket_TC_1103()[pri:3, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nighlty_addNew_Bucket_andVerifyBucket_TC_1103</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:27:17</td>   <td>-126182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_add_record_without_holiday_TC_1105</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:26:12</td>   <td>-190647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_delete_newley_bucketAndVerify_TC_1104()[pri:4, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_delete_newley_bucketAndVerify_TC_1104</td> 
+  <td>main@782505238</td>   <td></td> </tr>
 </table>
