--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,76 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee8876">  <td>23/11/20 05:41:05</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:05</td>   <td>420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:36</td>   <td>30980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpacePage_Tc_201()[pri:2, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifySpacePage_Tc_201</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:36</td>   <td>31078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:41:38</td>   <td>33532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:01</td>   <td>56174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyPopupAddSpace_TC_202()[pri:3, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifyPopupAddSpace_TC_202</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:03</td>   <td>58296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:18</td>   <td>73836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:42:46</td>   <td>101264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203()[pri:4, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">multipleUsersWithMutlipleSelections_TC_203</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:47:11</td>   <td>366538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:47:18</td>   <td>373959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:47:42</td>   <td>397436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.addSpace_skippingFileds_TC_204()[pri:5, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">addSpace_skippingFileds_TC_204</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:48:12</td>   <td>427421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:48:19</td>   <td>434012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:48:43</td>   <td>458561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_fromTableData_TC_205()[pri:6, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifySpaceData_fromTableData_TC_205</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:50:10</td>   <td>545647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:50:19</td>   <td>554256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:50:44</td>   <td>579466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_afterEdit_TC_208()[pri:9, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifySpaceData_afterEdit_TC_208</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:52:47</td>   <td>702184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:52:51</td>   <td>706681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:53:28</td>   <td>743352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:10, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">exportNewAddSpace_verifyCompleteRecords_TC_209</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:54:41</td>   <td>816401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:54:44</td>   <td>819190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.exportSpacesGoogleSheet_TC_210()[pri:11, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">exportSpacesGoogleSheet_TC_210</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:54:44</td>   <td>819194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:55:19</td>   <td>854350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verify_serachField_withSpaceName_TC_211()[pri:12, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verify_serachField_withSpaceName_TC_211</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:57:19</td>   <td>974678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:57:23</td>   <td>978463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:57:45</td>   <td>1000402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyDeleteSpace_TC_212()[pri:13, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">verifyDeleteSpace_TC_212</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:59:15</td>   <td>1090342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:59:21</td>   <td>1096264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 05:59:42</td>   <td>1117043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213()[pri:14, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">add_Spaces_Single_And_Carparking_Options_TC_213</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:08</td>   <td>1323835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:18</td>   <td>1333740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:40</td>   <td>1355729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">SelectionUnitPeriod_and_verify_two_option_TC_214</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/11/20 06:03:42</td>   <td>1357680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="ee8876">  <td>23/11/20 06:03:44</td>   <td>1359675</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
+<tr bgcolor="6b85f9">  <td>23/12/01 21:21:47</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:21:48</td>   <td>792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:22:19</td>   <td>31759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">createGroup_verifyGroup_TC_1101</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:23:11</td>   <td>83989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:23:13</td>   <td>86153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:23:42</td>   <td>114893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.newlyGroupCreated_RevisionHisotryEmpty_TC_1102()[pri:2, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:24:39</td>   <td>171773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:24:42</td>   <td>175500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:25:18</td>   <td>211130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nighlty_addNew_Bucket_andVerifyBucket_TC_1103()[pri:3, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nighlty_addNew_Bucket_andVerifyBucket_TC_1103</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:25:34</td>   <td>227432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:25:37</td>   <td>230085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:26:12</td>   <td>265239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_delete_newley_bucketAndVerify_TC_1104()[pri:4, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_delete_newley_bucketAndVerify_TC_1104</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:26:39</td>   <td>292131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:26:42</td>   <td>295451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:27:17</td>   <td>329704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105()[pri:5, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">nightly_add_record_without_holiday_TC_1105</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:28:49</td>   <td>421544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:28:51</td>   <td>424143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_7_RatesStorage.beforeTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:29:23</td>   <td>455886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_7_RatesStorage.TC_1106()[pri:6, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">TC_1106</td> 
+  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6f8776">  <td>23/12/01 21:30:08</td>   <td>501346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_7_RatesStorage.afterTest()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
+<tr bgcolor="6b85f9">  <td>23/12/01 21:30:15</td>   <td>508002</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_7_RatesStorage@581ac8a8]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@782505238</td>   <td></td> </tr>
 </table>
